# templater

./: .editorconfig  Cargo.toml  Containerfile.base  Containerfile.cli  Containerfile.serve  README.md  TEMPLATES.md
.github/workflows/: build-basecontainer.yml  build-containers.yml
examples/: default.config
src/axum/: main.rs  types.rs
src/cli/: main.rs
src/lib/: filters.rs  mod.rs  s3.rs  types.rs
