[package]
name = "pdf-generator"
version = "0.1.0"
authors = ["Tobias Florek <tob@butter.sh>"]
edition = "2021"
default-run = "pdf-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pdf_generator"
path = "src/lib/mod.rs"

[features]
default = ["build-cli"]
build-cli = ["clap", "anyhow"]
build-axum = ["axum"]

[[bin]]
name = "pdf-generator"
path = "src/cli/main.rs"
required-features = ["build-cli"]

[[bin]]
name = "serve"
path = "src/axum/main.rs"
required-features = ["build-axum"]

[dependencies]
anyhow = { version = "1", optional = true }
async-stream = "0.3.5"
axum = { version = "0.7", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
derive-newtype = "0.2.3"
futures = "0.3.30"
md-5 = "0.10.6"
mime_guess = "2"
minijinja = "1.0.10"
reqwest = { version = "0.11.24", features = ["rustls", "rustls-tls-webpki-roots", "stream"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "tracing"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"

[dev-dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
async-tempfile = "0.5.0"
