[package]
name = "templater"
version = "0.1.0"
authors = ["Tobias Florek <tob@butter.sh>"]
edition = "2021"
default-run = "templater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "templater"
path = "src/lib/mod.rs"

[features]
default = ["cli", "server"]
cli = ["anyhow", "clap", "serde_json", "serde_yaml"]
server = ["axum"]

[[bin]]
name = "templater"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "serve"
path = "src/axum/main.rs"
required-features = ["server"]

[dependencies]
anyhow = { version = "1", optional = true }
async-tempfile = "0.5.0"
axum = { version = "0.7", optional = true, features = ["json", "macros"] }
clap = { version = "4", optional = true, features = ["derive"] }
foundations = "3.2.2"
icu_decimal = "1.4.0"
md-5 = "0.10.6"
mime_guess = { version = "2.0.4", default-features = false }
minijinja = { version = "1.0.10", features = ["loader"] }
nutype = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-webpki-roots", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.114", optional = true }
serde_yaml = { version = "0.9", optional = true }
tempfile = "3.10.0" # TODO: to be removed
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.10", features = ["io"] }

[dev-dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cargo-machete]
ignored = ["md-5"]
